Control flow case statement fixes

--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/03-2-case.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/03-2-case.mdx
@@ -148,6 +148,7 @@ The following diagram shows the C++ syntax for a case statement.
 :::
 
 The syntax for the case statement in C++ uses the keyword **switch** followed by the expression to test.
+In C++, case statements are limited to only testing integers and single characters. Any integral [types](/book/part-1-instructions/1-sequence/5-reference/15-type/) such as `int`, `bool`, and `char`  are valid, however `double` and `string` are not.
 Within the curly braces you then have a list of cases.
 Each case has a value to match followed by a colon (`:`) and a list of statements.
 The final case is labelled with the `default` keyword.
@@ -165,13 +166,14 @@ We will explore the break statement in more detail soon, but for now you just ne
 
 ## How does `case` work?
 
-The case statement works in a very similar way to the if statement we worked through previously. The following code will achieve the same output as the [last example](/book/part-1-instructions/3-control-flow/5-reference/03-1-if#multiple-if-statements-combined) from the if statement page.
+The case statement works in a very similar way to the if statement we worked through previously. The following code will achieve a similar output as the [last example](/book/part-1-instructions/3-control-flow/5-reference/03-1-if#multiple-if-statements-combined) from the if statement page.
+It has been adjusted so that the user chooses from a numbered list of languages, by entering its number - remember, case statements in C++ cannot compare strings.
 
 In this example, the value we want to check is whatever the user entered, which has been stored in the `language` variable.
 So, `language` goes in parentheses right after the `switch` keyword.
  Within the body of the case statement you then have the separate cases you want to match.
 
-Notice that we have used the [break](/book/part-1-instructions/3-control-flow/5-reference/05-1-break) statement at the end of the "C#" and "C++" branches to indicate the end of the instructions for these individual cases. Also notice how we intentionally do not use a break statement in the "C" case. This means that when the "C" path is matched, the control will flow through into the same set of statements that exist for the "C++" branch, and we have avoided needing to repeat the same code in both branches.
+Notice that we have used the [break](/book/part-1-instructions/3-control-flow/5-reference/05-1-break) statement at the end of the "C++" and "C" branches to indicate the end of the instructions for these individual cases. Also notice how we intentionally do not use a break statement in the "C#" case. This means that when the "C#" path is matched, the control will flow through into the same set of statements that exist for the "C" branch, and we have avoided needing to repeat the same code in both branches.
 
 ```c++
 #include "splashkit.h"
@@ -220,7 +222,7 @@ If we forget to include a `break` where we _do_ want it, the compiler won't warn
 
 - The case statement is a kind of **instruction**. It allows you to command the computer to select a path based on the value of an expression.
 - Each path within the case statement has a value. The computer compares the case statement's expression to each path's value to determine which path to take.
-- Older languages limit the case statement to work only with integers and individual characters.
+- Older languages like C++ limit the case statement to work only with integers and individual characters.
 - The case statement has one entry point, multiple paths, and then one exit point.
 
 :::
