--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/07-indentation.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/07-indentation.mdx
@@ -1,6 +1,24 @@
 ---
 title: Indentation
 ---
+import { Aside } from '@astrojs/starlight/components';
+
+<Aside type="note" title="In Brief">
+  ![Illustration of indentation](./images/indentation.png)
+
+  #### Indentation...
+
+    - involves indenting code so that you can easily see the control flow structure.
+    - uses spaces or tabs to show which statements are inside other control flow statements.
+    - is not used by the compiler, but is *essential* for the human readers.
+    - is really important!
+
+  :::tip
+
+  Always indent your code as you progress. Periodically you can use VS Code's "Format Document" shortcut to help you out. Right-click on your code and select "Format Document". This will adjust the indentation, to make sure that it aligns with your control flow.
+
+  :::
+</Aside>
 
 ## The importance of style
 
