--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/09-multimedia-methods.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/09-multimedia-methods.mdx
@@ -43,8 +43,7 @@ void process_events();
 bool quit_requested();
 
 // Key input
-// This also requires... to get access to the KeyCode details.
-// bool KeyDown(KeyCode key);
+bool key_down(key_code key);
 
 // Random numbers
 float rnd(); // 0 to 1
@@ -66,33 +65,31 @@ triangle triangle_from(double x1, double y1, double x2, double y2, double x3, do
 
 ### Key Codes
 
-For the `KeyDown` method, you need to tell it which key you are wanting to check. SplashKit provides a list of key codes in a `KeyCode` type, which provides a list of values you can choose from. You should be able to see these in VS Code using its IntelliSense, just make sure you have `using SplashKitSDK;` so that you can see the `KeyCode`.
+For the `key_down` method, you need to tell it which key you are wanting to check. SplashKit provides a list of key codes in a `key_code` type, which provides a list of values you can choose from. You should be able to see these in VS Code using its IntelliSense.
 
 The main options include:
 
 ||||||
 |--|--|--|--|--|
-| BackspaceKey | TabKey | ReturnKey | EscapeKey | SpaceKey |
-| Num0Key | Num1Key | Num2Key | Num3Key | Num4Key |
-| Num5Key | Num6Key | Num7Key | Num8Key | Num9Key |
-| ColonKey | SemiColonKey | AKey | BKey | CKey |
-| DKey | EKey | FKey | GKey | HKey |
-| IKey | JKey | KKey | LKey | MKey |
-| NKey | OKey | PKey | QKey | RKey |
-| SKey | TKey | UKey | VKey | WKey |
-| XKey | YKey | ZKey | DeleteKey | Keypad0 |
-| Keypad1 | Keypad2 | Keypad3 | Keypad4 | Keypad5 |
-| Keypad6 | Keypad7 | Keypad8 | Keypad9 | KeypadPeriod |
-| KeypadDivide | KeypadMultiply | KeypadMinus | KeypadPlus | KeypadEnter |
-| KeypadEquals | UpKey | DownKey | RightKey | LeftKey |
-| InsertKey | HomeKey | EndKey | PageUpKey | PageDownKey |
-| F1Key | F2Key | F3Key | F4Key | F5Key |
-| F6Key | F7Key | F8Key | F9Key | F10Key |
-| F11Key | F12Key | F13Key | F14Key | F15Key |
-| RightShiftKey | LeftShiftKey | RightCtrlKey | LeftCtrlKey | RightAltKey |
-| LeftAltKey | LeftSuperKey | RightSuperKey | | |
-
-You access these using `KeyCode.` and then the specific key value. For example, `KeyCode.AKey` for the "a" key or `KeyCode.LeftKey` for the left arrow. See the example code below for how to use this.
+| BACKSPACE_KEY | TAB_KEY | RETURN_KEY | ESCAPE_KEY | SPACE_KEY |
+| NUM0_KEY | NUM1_KEY | NUM2_KEY | NUM3_KEY | NUM4_KEY |
+| NUM5_KEY | NUM6_KEY | NUM7_KEY | NUM8_KEY | NUM9_KEY |
+| COLON_KEY | SEMI_COLON_KEY | A_KEY | B_KEY | C_KEY |
+| D_KEY | E_KEY | F_KEY | G_KEY | H_KEY |
+| I_KEY | J_KEY | K_KEY | L_KEY | M_KEY |
+| N_KEY | O_KEY | P_KEY | Q_KEY | R_KEY |
+| S_KEY | T_KEY | U_KEY | V_KEY | W_KEY |
+| X_KEY | Y_KEY | Z_KEY | DELETE_KEY | KEYPAD0 |
+| KEYPAD1 | KEYPAD2 | KEYPAD3 | KEYPAD4 | KEYPAD5 |
+| KEYPAD6 | KEYPAD7 | KEYPAD8 | KEYPAD9 | KEYPAD_PERIOD |
+| KEYPAD_DIVIDE | KEYPAD_MULTIPLY | KEYPAD_MINUS | KEYPAD_PLUS | KEYPAD_ENTER |
+| KEYPAD_EQUALS | UP_KEY | DOWN_KEY | RIGHT_KEY | LEFT_KEY |
+| INSERT_KEY | HOME_KEY | END_KEY | PAGE_UP_KEY | PAGE_DOWN_KEY |
+| F1_KEY | F2_KEY | F3_KEY | F4_KEY | F5_KEY |
+| F6_KEY | F7_KEY | F8_KEY | F9_KEY | F10_KEY |
+| F11_KEY | F12_KEY | F13_KEY | F14_KEY | F15_KEY |
+| RIGHT_SHIFT_KEY | LEFT_SHIFT_KEY | RIGHT_CTRL_KEY | LEFT_CTRL_KEY | RIGHT_ALT_KEY |
+| LEFT_ALT_KEY | LEFT_SUPER_KEY | RIGHT_SUPER_KEY | | |
 
 ### Mouse Buttons and Methods
 
@@ -103,9 +100,9 @@ SplashKit also includes a number of methods for working with the mouse. These in
 // #include "splashkit.h"
 
 // Was a given button on the mouse clicked?
-bool mouse_clicked(BUTTON);
+bool mouse_clicked(mouse_button button);
 // Is a given button in the mouse current held down?
-bool mouse_down(BUTTON);
+bool mouse_down(mouse_button button);
 
 // Where is the mouse - relative to the left side of the window?
 float mouse_x();
@@ -113,17 +110,17 @@ float mouse_x();
 float mouse_y();
 ```
 
-For these you will need to use the `MouseButton` data. As with the `KeyCode` data, make sure you have `using SplashKitSDK;` so that you can see the `MouseButton` type.
+For these you will need to use the `mouse_button` data.
 
 There are the following mouse button values:
 
-- `left_button` for the left mouse button
-- `middle_button` for the middle mouse button
-- `right_button` for the right mouse button
-- `mouse_x1_button` for the x1 mouse button
-- `mouse_x2_button` for the x2 mouse button
+- `LEFT_BUTTON` for the left mouse button
+- `MIDDLE_BUTTON` for the middle mouse button
+- `RIGHT_BUTTON` for the right mouse button
+- `MOUSE_X1_BUTTON` for the x1 mouse button
+- `MOUSE_X2_BUTTON` for the x2 mouse button
 
-As with the `KeyCode` data, you access this using `MouseButton.` and the button name, `MouseButton.LeftButton` for example. See the example code below to see how this may work.
+See the example code below to see how these can be used.
 
 ### Example Multimedia Code
 
